# BigVGANInference

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-package.yaml  pre-commit.yaml
bigvganinference/: __init__.py  activations.py  bigvgan.py  inference.py  meldataset.py  utils.py
bigvganinference/alias_free_activation/cuda/: activation1d.py  load.py
bigvganinference/alias_free_activation/torch/: __init__.py  act.py  filter.py  resample.py
example/: basic.py  inference.py
github/workflows/: pre-commit.yaml
